<resources>
    <string name="app_name">LabActivityDataTransfer</string>
    <string name="alert1">请输入您的注册信息！</string>
    <string name="alert2">请填写想注册的账号!</string>
    <string name="name">用户名：</string>
    <string name="passwd">密码：</string>
    <string name="gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
</resources>
